recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:17: error: not found: value lenght
			pentaKoch(levels-1, lenght*0.4)
                                            ^