recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if (levels==0) {
			avance(length)
		
		} else {
			pentaKoch(levels-1, length*0.4)
			left(108)
			pentaKoch(levels-1, length*0.4)
			right(180-108)
			pentaKoch(levels-1, length*0.4)
			right(180-108)
			pentaKoch(levels-1, length*0.4)
			right(180-108)
			pentaKoch(levels-1, length*0.4)
			left(108)
			pentaKoch(levels-1, lenght*0.4)
		}
}
